# 2024-1_BPL_STalk_Model_Research

./: .gitignore  .gitmodules  Model_Arch.ipynb  README.md  stalk_app.py  stalk_models.py  stalk_sample_ui.py  stalk_streamer.py
4bitQ/: Llama3-8B-Instruct.ipynb  llama-cpp-python.ipynb  llama-cpp.ipynb  llama-transformers.ipynb  llama.py  pyproject.toml
4bitQ/FineTunned-Models/: .gitignore  2023_05_26_bnb_4bit_koalpaca_v1_1a_on_polyglot_ko_12_8b.ipynb  KoAlpaca-Polyglot-12.8B.ipynb  KoAlpaca-Polyglot-12.8B_8bit.ipynb  KoAlpaca-Polyglot-5.8B.ipynb  Llama 2 13B 소개팅 주제 추천.hwpx  Llama3-8B-Instruct.ipynb  Llama3-8B.ipynb  Llama_3_Bllossom_8B.ipynb  Llama_3_Open_Ko_8B_Instruct_preview.ipynb  awesome-korean-llm.md  cudaVsNPU.ipynb  intel-npu-acceleration.ipynb  llama3_8B-8bit-q.ipynb
4bitQ/chat_presets/: conversation1.json  conversation2.json  conversation3.json  conversation4.json  대화 스크립트 조연우.hwp
4bitQ/examples/hf_pull/: main.py
4bitQ/reference/: Alpaca_+_Llama_3_8b_full_example.ipynb
SpeakerDiarization/: .gitignore  diart_test.ipynb  livepipe.py  model.ipynb  pyproject.toml  speaker_model.ipynb  speaker_model.py  speech_Diarization.ipynb
SpeakerDiarization/reference/: deep_speaker.ipynb  speech_Diarization.ipynb  speech_recognition_pipeline_tutorial.ipynb
